<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phaseshift_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eunhyeon1212p@gmail.com">jimmy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>phaseshift_interfaces</depend>
  <depend>std_msg</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
